tests/invalid_inputs/sema/void_class_member.cpp

struct S {
	void m;		// error
};

